--- a/server/appsettings.json
+++ b/server/appsettings.json
@@ -9,7 +9,10 @@
         }
     },
     "AllowedHosts": "*",
+    "ConnectionStringsDocker": {
+        "ConnectionString": "User Id=postgres;Password=postgres;Server=localhost;Port=5433;Database=SampleDbDriver;IntegratedSecurity=true;Pooling=true"
+    },
     "ConnectionStrings": {
-        "ConnectionString": "server=SERHII;database=Posts;Trusted_Connection=true;Encrypt=False"
+        "ConnectionString": "User Id=postgres;Password=260992;Server=localhost;Port=5432;Database=SampleDbDriver;IntegratedSecurity=true;Pooling=true"
     }
 }
