--- a/server/appsettings.json
+++ b/server/appsettings.json
@@ -9,10 +9,10 @@
         }
     },
     "AllowedHosts": "*",
-    "ConnectionStringsDocker": {
+    "ConnectionStrings": {
         "ConnectionString": "User Id=postgres;Password=postgres;Server=localhost;Port=5433;Database=SampleDbDriver;IntegratedSecurity=true;Pooling=true"
     },
-    "ConnectionStrings": {
+    "ConnectionStrings-local": {
         "ConnectionString": "User Id=postgres;Password=260992;Server=localhost;Port=5432;Database=SampleDbDriver;IntegratedSecurity=true;Pooling=true"
     }
 }
