change appsetting server

--- a/server/appsettings.json
+++ b/server/appsettings.json
@@ -10,9 +10,8 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "ConnectionString": "User Id=postgres;Password=postgres;Server=localhost;Port=5433;Database=SampleDbDriver;IntegratedSecurity=true;Pooling=true"
-    },
-    "ConnectionStrings-local": {
-        "ConnectionString": "User Id=postgres;Password=260992;Server=localhost;Port=5432;Database=SampleDbDriver;IntegratedSecurity=true;Pooling=true"
+        "ConnectionString": "User Id=postgres;Password=postgres;Server=localhost;Port=5433;Database=SampleDbDriver;IntegratedSecurity=true;Pooling=true",
+        "ConnectionString-docker": "User Id=postgres;Password=postgres;Server=localhost;Port=5433;Database=SampleDbDriver;IntegratedSecurity=true;Pooling=true",
+        "ConnectionString-local": "User Id=postgres;Password=260992;Server=localhost;Port=5432;Database=SampleDbDriver;IntegratedSecurity=true;Pooling=true"
     }
 }
