change conection string

--- a/server/appsettings.json
+++ b/server/appsettings.json
@@ -9,8 +9,9 @@
         }
     },
     "AllowedHosts": "*",
+
     "ConnectionStrings": {
-        "ConnectionString": "User Id=postgres;Password=postgres;Server=localhost;Port=5433;Database=SampleDbDriver;IntegratedSecurity=true;Pooling=true",
+        "ConnectionString": "User Id=serhii;Password=zsXcZaiyzDz76WW2qs99JHBdIuSe4fg5;Server=dpg-cgqmr0t269v32o9vtaq0-a.frankfurt-postgres.render.com;Port=5432;Database=posts_db_8557;IntegratedSecurity=true;Pooling=true",
         "ConnectionString-docker": "User Id=postgres;Password=postgres;Server=localhost;Port=5433;Database=SampleDbDriver;IntegratedSecurity=true;Pooling=true",
         "ConnectionString-local": "User Id=postgres;Password=260992;Server=localhost;Port=5432;Database=SampleDbDriver;IntegratedSecurity=true;Pooling=true"
     }
