--- a/server/appsettings.json
+++ b/server/appsettings.json
@@ -9,8 +9,8 @@
         }
     },
     "AllowedHosts": "*",
-
+    "URLS": "http://localhost:5000/",
     "ConnectionStrings": {
-        
+        "ConnectionString": "User Id=postgres;Password=260992;Server=localhost;Port=5432;Database=SampleDbDriver;IntegratedSecurity=true;Pooling=true"
     }
 }
